--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -139,7 +139,7 @@
 				}
 
 				> footer {
-					padding: 0 $pad ($pad * $tbFactor) $pad;
+					padding: $pad $pad ($pad * $tbFactor) $pad;
 				}
 
 				// Intro.
@@ -153,7 +153,7 @@
 
 		// Copyright.
 			.copyright {
-				padding: 0 $pad $pad $pad;
+				padding: $pad $pad $pad $pad;
 			}
 
 	}
@@ -496,6 +496,8 @@
 						> :last-child {
 							margin-bottom: 0;
 						}
+
+						background-color: _palette(accent);
 					}
 
 					// Intro.
@@ -506,7 +508,8 @@
 								margin-bottom: 0;
 
 								ul.actions {
-									display: none;
+									//display: none;
+									margin: auto;
 								}
 
 								// Hack: Undo Chrome grid hack.
@@ -516,9 +519,9 @@
 										width: 100%;
 									}
 
-									> ul.actions {
-										margin-left: (_size(element-margin) * -0.5);
-									}
+									// > ul.actions {
+									// 	// margin-left: (_size(element-margin) * -0.5);
+									// }
 
 									&:before {
 										margin-left: 0;
